# RusTor

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: bittorent.rs  main.rs
src/Bencode/: decode.rs  encode.rs
src/Peers/: peer.rs
src/Torrentfile/: magnet.rs  mod.rs  torrent.rs
src/Tracker/: mod.rs  tracker.rs  udp.rs
