[package]
name = "RusTor"
version = "0.1.0"
authors = ["Bhaskar Hemanth <bhaskar96.surya@gmail.com>"]
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"
sha1 = "0.10"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.2"
rand = "0.8"
hex = "0.4"
urlencoding = "2.1"
anyhow = "1.0.99"
serde_bytes = "0.11.17"
clap = { version = "4.5.46", features = ["derive"] }
data-encoding = "2.9.0"
